[gd_scene load_steps=47 format=4 uid="uid://7abr8cv03w62"]

[ext_resource type="Script" uid="uid://bjeu47nj2spma" path="res://Scripts/player.gd" id="1_ikcpc"]
[ext_resource type="Texture2D" uid="uid://8nlfl8v21vu5" path="res://Assets/Player-rpg.png" id="2_5erdv"]
[ext_resource type="PackedScene" uid="uid://jmivqglk4dgg" path="res://Scenes/enemy.tscn" id="3_a2ia3"]
[ext_resource type="PackedScene" uid="uid://bp1kjj62u3cje" path="res://Scenes/UI.tscn" id="5_236hc"]
[ext_resource type="Script" uid="uid://bnpcywd312n3w" path="res://Scripts/spawner.gd" id="5_a2ia3"]
[ext_resource type="Texture2D" uid="uid://cv6h6ua3rqpph" path="res://Assets/kenney_tiny-town/Tilemap/tilemap.png" id="6_236hc"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lwkuy"]
texture = ExtResource("6_236hc")
separation = Vector2i(1, 1)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
10:1/0 = 0
11:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0

[sub_resource type="TileSet" id="TileSet_tqiex"]
sources/0 = SubResource("TileSetAtlasSource_lwkuy")

[sub_resource type="Animation" id="Animation_qbrl8"]
resource_name = "Attack"
length = 0.35
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(17, 0), Vector2(17, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_reset"
}]
}

[sub_resource type="Animation" id="Animation_a2ia3"]
resource_name = "Dead"
length = 0.35
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [100, 101, 102, 103]
}

[sub_resource type="Animation" id="Animation_5erdv"]
resource_name = "Jump"
length = 0.75
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [92, 93, 94, 95, 96, 97, 98, 99, 99]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.75),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"state_reset"
}]
}

[sub_resource type="Animation" id="Animation_236hc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(17, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_ikcpc"]
resource_name = "Walk"
length = 0.25
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 37, 38, 39]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lwkuy"]
_data = {
&"Attack": SubResource("Animation_qbrl8"),
&"Dead": SubResource("Animation_a2ia3"),
&"Jump": SubResource("Animation_5erdv"),
&"RESET": SubResource("Animation_236hc"),
&"Walk": SubResource("Animation_ikcpc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qbrl8"]
size = Vector2(15, 7)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tqiex"]
size = Vector2(66, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5erdv"]
size = Vector2(66, 56)

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qbrl8"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tqiex"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ha3dl"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_f3gli"]
animation = &"Jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2jcip"]
animation = &"Jump"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_ikcpc"]
blend_point_0/node = SubResource("AnimationNodeAnimation_tqiex")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_ha3dl")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_f3gli")
blend_point_2/pos = Vector2(0, -1)
blend_point_3/node = SubResource("AnimationNodeAnimation_2jcip")
blend_point_3/pos = Vector2(-1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6l6h0"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o18aq"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hd7sb"]
animation = &"Attack"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5vthg"]
animation = &"Attack"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_5erdv"]
blend_point_0/node = SubResource("AnimationNodeAnimation_6l6h0")
blend_point_0/pos = Vector2(0, 1)
blend_point_1/node = SubResource("AnimationNodeAnimation_o18aq")
blend_point_1/pos = Vector2(-1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_hd7sb")
blend_point_2/pos = Vector2(0, -0.9)
blend_point_3/node = SubResource("AnimationNodeAnimation_5vthg")
blend_point_3/pos = Vector2(1, 0)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_qbrl8"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_a2ia3"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_236hc"]
animation = &"Walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lwkuy"]
animation = &"Walk"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_tqiex"]
blend_point_0/node = SubResource("AnimationNodeAnimation_qbrl8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_a2ia3")
blend_point_1/pos = Vector2(0, 1)
blend_point_2/node = SubResource("AnimationNodeAnimation_236hc")
blend_point_2/pos = Vector2(1, 0)
blend_point_3/node = SubResource("AnimationNodeAnimation_lwkuy")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_unus1"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_and0o"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jf8f8"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_qx7ya"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_d4dc6"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7wxy1"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8ce4n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_o0i6v"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ubp3"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oi0bv"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ikcpc"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ikcpc"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_qbrl8")
states/Idle/position = Vector2(281, 144)
states/Jump/node = SubResource("AnimationNodeBlendSpace2D_ikcpc")
states/Jump/position = Vector2(414, 47)
states/Start/position = Vector2(90, 144)
states/Sword/node = SubResource("AnimationNodeBlendSpace2D_5erdv")
states/Sword/position = Vector2(406, 287)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_tqiex")
states/Walk/position = Vector2(525, 144)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_unus1"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_and0o"), "Idle", "Sword", SubResource("AnimationNodeStateMachineTransition_jf8f8"), "Sword", "Idle", SubResource("AnimationNodeStateMachineTransition_qx7ya"), "Walk", "Sword", SubResource("AnimationNodeStateMachineTransition_d4dc6"), "Sword", "Walk", SubResource("AnimationNodeStateMachineTransition_7wxy1"), "Idle", "Jump", SubResource("AnimationNodeStateMachineTransition_8ce4n"), "Jump", "Idle", SubResource("AnimationNodeStateMachineTransition_o0i6v"), "Jump", "Walk", SubResource("AnimationNodeStateMachineTransition_1ubp3"), "Walk", "Jump", SubResource("AnimationNodeStateMachineTransition_oi0bv"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_ikcpc")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a2ia3"]
size = Vector2(30, 36)

[node name="main_level" type="Node2D" groups=["main"]]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
modulate = Color(0.215686, 0.215686, 0.215686, 1)
position = Vector2(1, 0)
tile_map_data = PackedByteArray("AADz//n/AAABAAkAAADz//r/AAACAAgAAADz//v/AAACAAkAAADz//z/AAABAAgAAADz//3/AAACAAgAAADz//7/AAABAAoAAADz////AAAAAAoAAADz/wAAAAABAAkAAADz/wEAAAACAAgAAADz/wIAAAACAAkAAADz/wMAAAABAAkAAADz/wQAAAABAAgAAADz/wUAAAACAAgAAADz/wYAAAABAAoAAAD0//n/AAAAAAoAAAD0//r/AAABAAoAAAD0//v/AAACAAkAAAD0//z/AAABAAgAAAD0//3/AAABAAkAAAD0//7/AAAAAAkAAAD0////AAACAAkAAAD0/wAAAAACAAgAAAD0/wEAAAACAAgAAAD0/wIAAAACAAkAAAD0/wMAAAAAAAoAAAD0/wQAAAACAAkAAAD0/wUAAAACAAgAAAD0/wYAAAAAAAkAAAD1//n/AAACAAkAAAD1//r/AAABAAgAAAD1//v/AAACAAgAAAD1//z/AAABAAgAAAD1//3/AAABAAkAAAD1//7/AAABAAoAAAD1////AAABAAkAAAD1/wAAAAABAAgAAAD1/wEAAAACAAkAAAD1/wIAAAACAAoAAAD1/wMAAAACAAgAAAD1/wQAAAABAAkAAAD1/wUAAAABAAkAAAD1/wYAAAACAAoAAAD2//n/AAABAAoAAAD2//r/AAACAAgAAAD2//v/AAABAAgAAAD2//z/AAABAAgAAAD2//3/AAACAAoAAAD2//7/AAABAAkAAAD2////AAABAAoAAAD2/wAAAAACAAkAAAD2/wEAAAAAAAkAAAD2/wIAAAACAAgAAAD2/wMAAAAAAAoAAAD2/wQAAAAAAAkAAAD2/wUAAAABAAkAAAD2/wYAAAAAAAkAAAD3//n/AAACAAoAAAD3//r/AAAAAAoAAAD3//v/AAAAAAoAAAD3//z/AAAAAAoAAAD3//3/AAABAAoAAAD3//7/AAAAAAgAAAD3////AAAAAAoAAAD3/wAAAAACAAoAAAD3/wEAAAABAAoAAAD3/wIAAAACAAkAAAD3/wMAAAABAAgAAAD3/wQAAAABAAgAAAD3/wUAAAABAAoAAAD3/wYAAAABAAoAAAD4//n/AAABAAgAAAD4//r/AAACAAkAAAD4//v/AAAAAAkAAAD4//z/AAABAAgAAAD4//3/AAACAAgAAAD4//7/AAACAAoAAAD4////AAAAAAgAAAD4/wAAAAAAAAgAAAD4/wEAAAABAAoAAAD4/wIAAAABAAoAAAD4/wMAAAACAAkAAAD4/wQAAAACAAgAAAD4/wUAAAABAAkAAAD4/wYAAAABAAgAAAD5//n/AAABAAoAAAD5//r/AAAAAAkAAAD5//v/AAACAAoAAAD5//z/AAABAAkAAAD5//3/AAAAAAoAAAD5//7/AAAAAAgAAAD5////AAAAAAoAAAD5/wAAAAACAAgAAAD5/wEAAAABAAoAAAD5/wIAAAACAAkAAAD5/wMAAAABAAgAAAD5/wQAAAACAAgAAAD5/wUAAAAAAAgAAAD5/wYAAAABAAoAAAD6//n/AAAAAAoAAAD6//r/AAACAAoAAAD6//v/AAAAAAoAAAD6//z/AAACAAkAAAD6//3/AAABAAkAAAD6//7/AAACAAoAAAD6////AAAAAAkAAAD6/wAAAAACAAkAAAD6/wEAAAAAAAkAAAD6/wIAAAABAAoAAAD6/wMAAAABAAkAAAD6/wQAAAAAAAoAAAD6/wUAAAAAAAgAAAD6/wYAAAABAAkAAAD7//n/AAABAAkAAAD7//r/AAABAAoAAAD7//v/AAABAAgAAAD7//z/AAAAAAkAAAD7//3/AAACAAoAAAD7//7/AAABAAkAAAD7////AAAAAAgAAAD7/wAAAAACAAoAAAD7/wEAAAABAAkAAAD7/wIAAAAAAAgAAAD7/wMAAAAAAAkAAAD7/wQAAAABAAoAAAD7/wUAAAABAAoAAAD7/wYAAAAAAAkAAAD8//n/AAABAAgAAAD8//r/AAACAAoAAAD8//v/AAACAAkAAAD8//z/AAACAAoAAAD8//3/AAABAAkAAAD8//7/AAACAAkAAAD8////AAABAAkAAAD8/wAAAAACAAgAAAD8/wEAAAAAAAgAAAD8/wIAAAACAAgAAAD8/wMAAAAAAAoAAAD8/wQAAAABAAkAAAD8/wUAAAACAAkAAAD8/wYAAAACAAoAAAD9//n/AAAAAAkAAAD9//r/AAAAAAoAAAD9//v/AAAAAAoAAAD9//z/AAAAAAgAAAD9//3/AAAAAAkAAAD9//7/AAAAAAgAAAD9////AAACAAkAAAD9/wAAAAABAAkAAAD9/wEAAAABAAgAAAD9/wIAAAACAAkAAAD9/wMAAAAAAAgAAAD9/wQAAAAAAAkAAAD9/wUAAAACAAoAAAD9/wYAAAAAAAgAAAD+//n/AAAAAAgAAAD+//r/AAACAAkAAAD+//v/AAACAAoAAAD+//z/AAACAAgAAAD+//3/AAABAAgAAAD+//7/AAABAAoAAAD+////AAAAAAgAAAD+/wAAAAACAAgAAAD+/wEAAAABAAgAAAD+/wIAAAACAAkAAAD+/wMAAAABAAgAAAD+/wQAAAAAAAgAAAD+/wUAAAAAAAkAAAD+/wYAAAABAAoAAAD///n/AAAAAAgAAAD///r/AAABAAgAAAD///v/AAABAAgAAAD///z/AAAAAAoAAAD///3/AAAAAAgAAAD///7/AAACAAoAAAD/////AAAAAAkAAAD//wAAAAAAAAoAAAD//wEAAAAAAAgAAAD//wIAAAAAAAgAAAD//wMAAAAAAAkAAAD//wQAAAACAAoAAAD//wUAAAABAAkAAAD//wYAAAAAAAkAAAAAAPn/AAABAAgAAAAAAPr/AAACAAoAAAAAAPv/AAAAAAoAAAAAAPz/AAABAAkAAAAAAP3/AAABAAgAAAAAAP7/AAAAAAoAAAAAAP//AAACAAgAAAAAAAAAAAACAAgAAAAAAAEAAAAAAAgAAAAAAAIAAAABAAoAAAAAAAMAAAABAAkAAAAAAAQAAAACAAoAAAAAAAUAAAABAAgAAAAAAAYAAAAAAAgAAAABAPn/AAACAAgAAAABAPr/AAACAAgAAAABAPv/AAACAAoAAAABAPz/AAAAAAgAAAABAP3/AAABAAoAAAABAP7/AAAAAAoAAAABAP//AAABAAkAAAABAAAAAAACAAkAAAABAAEAAAAAAAgAAAABAAIAAAABAAkAAAABAAMAAAABAAgAAAABAAQAAAACAAgAAAABAAUAAAABAAgAAAABAAYAAAACAAgAAAACAPn/AAACAAkAAAACAPr/AAAAAAkAAAACAPv/AAABAAgAAAACAPz/AAAAAAoAAAACAP3/AAACAAoAAAACAP7/AAACAAkAAAACAP//AAABAAkAAAACAAAAAAACAAoAAAACAAEAAAACAAkAAAACAAIAAAABAAoAAAACAAMAAAACAAgAAAACAAQAAAAAAAoAAAACAAUAAAAAAAgAAAACAAYAAAABAAkAAAADAPn/AAABAAoAAAADAPr/AAACAAkAAAADAPv/AAAAAAkAAAADAPz/AAAAAAoAAAADAP3/AAACAAoAAAADAP7/AAACAAoAAAADAP//AAABAAgAAAADAAAAAAABAAkAAAADAAEAAAABAAgAAAADAAIAAAAAAAoAAAADAAMAAAAAAAgAAAADAAQAAAAAAAgAAAADAAUAAAABAAoAAAADAAYAAAABAAkAAAAEAPn/AAAAAAoAAAAEAPr/AAAAAAoAAAAEAPv/AAACAAgAAAAEAPz/AAABAAoAAAAEAP3/AAACAAkAAAAEAP7/AAACAAoAAAAEAP//AAACAAkAAAAEAAAAAAACAAoAAAAEAAEAAAABAAoAAAAEAAIAAAACAAgAAAAEAAMAAAABAAoAAAAEAAQAAAACAAoAAAAEAAUAAAAAAAoAAAAEAAYAAAAAAAoAAAAFAPn/AAACAAoAAAAFAPr/AAABAAgAAAAFAPv/AAAAAAgAAAAFAPz/AAAAAAkAAAAFAP3/AAABAAkAAAAFAP7/AAACAAoAAAAFAP//AAABAAgAAAAFAAAAAAABAAgAAAAFAAEAAAACAAoAAAAFAAIAAAACAAkAAAAFAAMAAAAAAAkAAAAFAAQAAAAAAAoAAAAFAAUAAAABAAoAAAAFAAYAAAAAAAoAAAAGAPn/AAABAAkAAAAGAPr/AAABAAgAAAAGAPv/AAAAAAgAAAAGAPz/AAACAAoAAAAGAP3/AAACAAgAAAAGAP7/AAACAAkAAAAGAP//AAABAAgAAAAGAAAAAAACAAkAAAAGAAEAAAAAAAoAAAAGAAIAAAAAAAkAAAAGAAMAAAACAAgAAAAGAAQAAAABAAgAAAAGAAUAAAAAAAkAAAAGAAYAAAACAAkAAAAHAPn/AAACAAoAAAAHAPr/AAACAAgAAAAHAPv/AAACAAkAAAAHAPz/AAABAAgAAAAHAP3/AAAAAAoAAAAHAP7/AAABAAkAAAAHAP//AAACAAoAAAAHAAAAAAABAAkAAAAHAAEAAAAAAAoAAAAHAAIAAAABAAoAAAAHAAMAAAAAAAkAAAAHAAQAAAACAAoAAAAHAAUAAAABAAkAAAAHAAYAAAABAAkAAAAIAPn/AAABAAkAAAAIAPr/AAACAAgAAAAIAPv/AAAAAAoAAAAIAPz/AAACAAoAAAAIAP3/AAABAAoAAAAIAP7/AAAAAAoAAAAIAP//AAAAAAkAAAAIAAAAAAAAAAkAAAAIAAEAAAACAAgAAAAIAAIAAAACAAoAAAAIAAMAAAAAAAoAAAAIAAQAAAAAAAkAAAAIAAUAAAAAAAkAAAAIAAYAAAAAAAgAAAAJAPn/AAABAAgAAAAJAPr/AAABAAkAAAAJAPv/AAACAAkAAAAJAPz/AAACAAoAAAAJAP3/AAABAAgAAAAJAP7/AAACAAkAAAAJAP//AAACAAkAAAAJAAAAAAABAAoAAAAJAAEAAAACAAkAAAAJAAIAAAACAAgAAAAJAAMAAAACAAkAAAAJAAQAAAAAAAkAAAAJAAUAAAABAAkAAAAJAAYAAAABAAgAAAAKAPn/AAAAAAkAAAAKAPr/AAABAAgAAAAKAPv/AAACAAgAAAAKAPz/AAACAAoAAAAKAP3/AAABAAkAAAAKAP7/AAAAAAkAAAAKAP//AAABAAkAAAAKAAAAAAACAAoAAAAKAAEAAAAAAAoAAAAKAAIAAAABAAgAAAAKAAMAAAAAAAoAAAAKAAQAAAABAAoAAAAKAAUAAAABAAoAAAAKAAYAAAABAAkAAAALAPn/AAABAAkAAAALAPr/AAACAAkAAAALAPv/AAACAAoAAAALAPz/AAABAAoAAAALAP3/AAACAAgAAAALAP7/AAABAAkAAAALAP//AAACAAoAAAALAAAAAAABAAoAAAALAAEAAAAAAAkAAAALAAIAAAAAAAkAAAALAAMAAAABAAgAAAALAAQAAAABAAkAAAALAAUAAAACAAgAAAALAAYAAAABAAgAAAAMAPn/AAABAAgAAAAMAPr/AAAAAAkAAAAMAPv/AAAAAAgAAAAMAPz/AAACAAkAAAAMAP3/AAACAAoAAAAMAP7/AAABAAkAAAAMAP//AAABAAoAAAAMAAAAAAABAAgAAAAMAAEAAAAAAAkAAAAMAAIAAAACAAoAAAAMAAMAAAABAAgAAAAMAAQAAAAAAAgAAAAMAAUAAAAAAAoAAAAMAAYAAAABAAoAAAA=")
tile_set = SubResource("TileSet_tqiex")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
script = ExtResource("1_ikcpc")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("2_5erdv")
hframes = 12
vframes = 9
frame = 33

[node name="anim" type="AnimationPlayer" parent="Player"]
libraries = {
&"": SubResource("AnimationLibrary_lwkuy")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-0.5, 12.5)
shape = SubResource("RectangleShape2D_qbrl8")
disabled = true

[node name="Sword" type="Area2D" parent="Player"]
position = Vector2(17, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Sword"]
position = Vector2(-17, 0)
shape = SubResource("RectangleShape2D_tqiex")
disabled = true
debug_color = Color(0.84059, 0.340525, 0.464656, 0.42)

[node name="Area2D" type="Area2D" parent="Player/Sword"]
position = Vector2(1, 0)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Sword/Area2D"]
position = Vector2(-18, 0)
shape = SubResource("RectangleShape2D_5erdv")

[node name="anim_tree" type="AnimationTree" parent="Player"]
tree_root = SubResource("AnimationNodeStateMachine_ikcpc")
anim_player = NodePath("../anim")
parameters/Idle/blend_position = Vector2(0, 0)
parameters/Jump/blend_position = Vector2(0, 0)
parameters/Sword/blend_position = Vector2(0, 0)
parameters/Walk/blend_position = Vector2(0, 0.0212766)

[node name="Area2D" type="Area2D" parent="Player"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_a2ia3")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(-1, 0)
script = ExtResource("5_a2ia3")
enemy_scene = ExtResource("3_a2ia3")

[node name="Timer" type="Timer" parent="Spawner"]
autostart = true

[node name="UI" parent="." instance=ExtResource("5_236hc")]

[connection signal="body_entered" from="Player/Sword/Area2D" to="Player" method="_on_sword_hit"]
[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Spawner/Timer" to="Spawner" method="_on_timer_timeout"]
